# domainradar-dib

./: README.md  cisco_umrella_benign_load.py  data_schema.json  fix_data_aggregation.js
cesnet_data/: README.md  cesnet_common_domains.sh  suffix_reduction.ipynb
cesnet_data/most_frequent/filtered/: cesnet_intersect_threshold.txt
collector/: .gitignore  AUTHORS  LICENSE  README.md  config.py  datatypes.py  exceptions.py  logger.py  main.py  mongo.py  requirements.txt  timing.py
collector/data/: alexa-1k.csv  blacklists.csv
collector/loaders/: __init__.py  direct_loader.py  misp_loader.py  source_loader.py  utils.py
collector/resolvers/: __init__.py  asn.py  dns.py  geoip.py  icmp.py  rdap.py  tls.py
data_verification/: .env  README.md  vt_checker.py
data_verification/example_data/: example.parquet  example.txt
graph_sources/: README.md  domainstats.xlsx  get_malware_domain_sources.py  get_malware_types.py  pyproject.toml
malware_data/: .gitignore  README.md  loader.py  requirements.txt  threatfox.py
