[tool.poetry]
name = "domain-graphs"
version = "0.1.0"
description = "Scripts to generate malware type graphs directly from MongoDB"
authors = ["Radek Hranicky <hranicky@fit.vut.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Core dependencies
numpy = "^2.2.0"
pandas = "^2.2.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
pymongo = "^4.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^7.0"
mypy = "^1.10"
ipython = "^8.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"